Added About page

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,18 @@
 @string{aps = {American Physical Society,}}
 
 @misc{bhatia2024testcasedesignrequirements,
+      title={Enhanced Quantum Convolutional Neural Network for Signature Authentication in Consumer Products}, 
+      author={Bala Krishnan Raghupathy and Subramaniyaswamy Vairavasundaram and Manikandan Ganesan and Rajesh Kumar Namachivayam and Ketan Kotecha and Norbert Herencsar},
+      year={2024},
+      eprint={2412.03693},
+      archivePrefix={arXiv},
+      primaryClass={cs.SE},
+      abbr      = {arXiv 2024},
+      url={https://ieeexplore.ieee.org/document/10771968}, 
+      html = {https://ieeexplore.ieee.org/document/10771968},
+}
+
+@misc{bhatia2024testcasedesignrequirements,
       title={System Test Case Design from Requirements Specifications: Insights and Challenges of Using ChatGPT}, 
       author={Shreya Bhatia and Tarushi Gandhi and Dhruv Kumar and Pankaj Jalote},
       year={2024},
